feat: implement ABC per pharmacy and ABC total