@@ -1,5 +1,7 @@
 package com.pharmacy999.app;
 
+import java.io.FileNotFoundException;
+import java.io.IOException;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 
@@ -9,106 +11,165 @@ import java.util.*;
 
 public class ExcelImporter {
 
-    public interface ProgressCallback {
-        void onProgress(long done, long total, String message);
-    }
+  public interface ProgressCallback {
 
-    // Excel rows are 1-based for humans, 0-based in POI:
-    private static final int HEADER_ROW_INDEX = 2;     // Excel row 3
-    private static final int DATA_START_ROW_INDEX = 3; // Excel row 4
-    private static final int TOTALS_ROW_INDEX = 1;
-    private static final String PROFIT_HEADER = "Прибыль";
-    private static final String SALES_HEADER = "Кол-во";// Excel row 2 (Pribil)
-    //private final DataFormatter dataFormatter = new DataFormatter(new Locale("ru", "RU"));
-    private final DataFormatter dataFormatter = new DataFormatter(Locale.of("ru", "RU"));
+    void onProgress(long done, long total, String message);
+  }
+
+  // Excel rows are 1-based for humans, 0-based in POI:
+  private static final int HEADER_ROW_INDEX = 3;     // Excel row 4
+  private static final int DATA_START_ROW_INDEX = 4; // Excel row 5
+
+  private final DataFormatter dataFormatter = new DataFormatter(Locale.of("ru", "RU"));
+
+  private static final int BRANCH_COL = 1;         // B - Филиал
+  private static final int PRODUCT_COL = 2;        // C - Наименование
+  private static final int MANUFACTURER_COL = 3;   // D - Производитель
+  private static final int SALES_COL = 4;          // E - Кол-во
+  private static final int SUM_COL = 5;            // F - Сумма
+  private static final int INCOME_SUM_COL = 6;     // G - Сумма приходн...
+  private static final int DISCOUNT_SUM_COL = 7;   // H - Сумма со скидк...
+  private static final int PROFIT_COL = 8;         // I - Прибыль
+
+  private static final String BRANCH_HEADER = "Филиал";
+  private static final String PRODUCT_HEADER = "Наименование";
+  private static final String MANUFACTURER_HEADER = "Производитель";
+  private static final String SALES_HEADER = "Кол-во";
+  private static final String SUM_HEADER = "Сумма";
+  private static final String INCOME_SUM_HEADER = "Сумма приходная";
+  private static final String DISCOUNT_SUM_HEADER = "Сумма со скидкой";
+  private static final String PROFIT_HEADER = "Прибыль";
 
 
+  public ImportResult readAll(List<File> files, ProgressCallback cb)
+      throws IOException {
+    List<RowRecord> out = new ArrayList<>();
+    double totalProfit = 0.0;
+    double totalSales = 0.0;
 
-    public ImportResult readAll(List<File> files, ProgressCallback cb) throws Exception {
-        List<RowRecord> out = new ArrayList<>();
-        double totalProfit = Double.NaN;// empty list for all Excel files
-        double totalSales = Double.NaN;
+    for (File f : files) {
+      cb.onProgress(0, 1, "Reading " + f.getName() + "...");
 
-        for (File f : files) {
-            cb.onProgress(0, 1, "Reading " + f.getName() + "...");
+      try (FileInputStream in = new FileInputStream(f);
+          Workbook wb = new XSSFWorkbook(in)) {
 
-            try (FileInputStream in = new FileInputStream(f); // read the file from the disk
-                Workbook wb = new XSSFWorkbook(in)) { //represents te entire Excel file in memory
 
-                Sheet sheet = wb.getSheetAt(0);
+        Sheet sheet = wb.getSheetAt(0);
+        FormulaEvaluator evaluator = wb.getCreationHelper().createFormulaEvaluator();
 
-                Row headerRow = sheet.getRow(HEADER_ROW_INDEX);
-                if (headerRow == null) continue; //skip Excel file if header is missing
+        validateHeaderRow(sheet, f.getName());
+        int lastRow = sheet.getLastRowNum();
+        String currentBranch = "";
 
-                List<String> headers = readHeaders(headerRow);
-                int profitCol = headers.indexOf(PROFIT_HEADER);
-                if (profitCol < 0) {
-                    throw new IllegalArgumentException("Column '" + PROFIT_HEADER + "' not found in " + f.getName());
-                }
-                int salesCol = headers.indexOf(SALES_HEADER);
-                if (salesCol < 0) {
-                    throw new IllegalArgumentException("Column '" + SALES_HEADER + "' not found in " + f.getName());
-                }
-
-                Row totalsRow = sheet.getRow(TOTALS_ROW_INDEX);
-                if (totalsRow == null) {
-                    throw new IllegalArgumentException("Totals row (Excel row 2) not found in " + f.getName());
-                }
-
-                String totalProfitStr = getCellAsString(totalsRow.getCell(profitCol));
-                String salesStr = getCellAsString(totalsRow.getCell(salesCol));
-                double fileTotalProfit = parseRuNumber(totalProfitStr);
-                totalSales = parseRuNumber(salesStr);
-
-                totalProfit = fileTotalProfit;
-
-                int lastRow = sheet.getLastRowNum(); // index of the last row
-
-                //start iterating through every row
-                for (int r = DATA_START_ROW_INDEX; r <= lastRow; r++) {
-                    Row row = sheet.getRow(r);
-                    if (row == null) continue;
-
-                    Map<String, String> values = new LinkedHashMap<>();
-                    for (int c = 0; c < headers.size(); c++) {
-                        values.put(headers.get(c), getCellAsString(row.getCell(c)));
-                    }
-
-                    // rowNumber store as Excel 1-based
-                    out.add(new RowRecord(f.getName(), r + 1, values));
-                }
-            }
+        // last row contains totals
+        Row totalsRow = sheet.getRow(lastRow);
+        if (totalsRow == null) {
+          throw new IllegalArgumentException("Totals row not found in " + f.getName());
         }
 
-        return new ImportResult(out, totalProfit, totalSales);
+        totalProfit = parseRuNumber(getCellAsString(totalsRow.getCell(PROFIT_COL), evaluator));
+
+        for (int r = DATA_START_ROW_INDEX; r <= lastRow; r++) {
+          Row row = sheet.getRow(r);
+          if (row == null || isRelevantDataRowEmpty(row)) {
+            continue;
+          }
+
+          String branch = getCellAsString(row.getCell(BRANCH_COL));
+          if (!branch.isEmpty()) {
+            currentBranch = branch;
+          } else {
+            // In case branch cells are blank within a grouped block,
+            // keep using the last seen branch name.
+            branch = currentBranch;
+          }
+
+          Map<String, String> values = new LinkedHashMap<>();
+          values.put(BRANCH_HEADER, branch);
+          values.put(PRODUCT_HEADER, getCellAsString(row.getCell(PRODUCT_COL)));
+          values.put(MANUFACTURER_HEADER, getCellAsString(row.getCell(MANUFACTURER_COL)));
+          values.put(SALES_HEADER, getCellAsString(row.getCell(SALES_COL)));
+          values.put(SUM_HEADER, getCellAsString(row.getCell(SUM_COL)));
+          values.put(INCOME_SUM_HEADER, getCellAsString(row.getCell(INCOME_SUM_COL)));
+          values.put(DISCOUNT_SUM_HEADER, getCellAsString(row.getCell(DISCOUNT_SUM_COL)));
+          values.put(PROFIT_HEADER, getCellAsString(row.getCell(PROFIT_COL)));
+
+          out.add(new RowRecord(f.getName(), r + 1, values));
+
+        }
+      }
+
+
+    }
+    return new ImportResult(out, totalProfit, totalSales);
+
+
+  }
+
+  private void validateHeaderRow(Sheet sheet, String fileName) {
+    Row headerRow = sheet.getRow(HEADER_ROW_INDEX);
+    if (headerRow == null) {
+      throw new IllegalArgumentException("Header row (Excel row 4) not found in " + fileName);
     }
 
-    private List<String> readHeaders(Row headerRow) {
-        List<String> headers = new ArrayList<>();
-        int last = headerRow.getLastCellNum();
-        for (int c = 0; c < last; c++) {
-            String h = getCellAsString(headerRow.getCell(c)).trim();
-            headers.add(h.isEmpty() ? ("COL_" + (c + 1)) : h);
-        }
-        return headers;
-    }
-    private String getCellAsString(Cell cell) {
-        if (cell == null) return "";
-        return dataFormatter.formatCellValue(cell).trim();
-    }
+    checkHeader(headerRow, BRANCH_COL, "Филиал", fileName);
+    checkHeader(headerRow, PRODUCT_COL, "Наименование", fileName);
+    checkHeader(headerRow, MANUFACTURER_COL, "Производитель", fileName);
+    checkHeader(headerRow, SALES_COL, "Кол-во", fileName);
+    checkHeader(headerRow, SUM_COL, "Сумма", fileName);
+    checkHeader(headerRow, PROFIT_COL, "Прибыль", fileName);
+  }
 
-    private double parseRuNumber(String s) {
-        if (s == null) return Double.NaN;
-        String t = s.trim()
-            .replace("\u00A0", "") // NBSP
-            .replace(" ", "")
-            .replace(".", "")
-            .replace(",", ".");
-        if (t.isEmpty()) return Double.NaN;
-        try {
-            return Double.parseDouble(t);
-        } catch (NumberFormatException e) {
-            return Double.NaN;
-        }
+  private void checkHeader(Row headerRow, int colIndex, String expected, String fileName) {
+    String actual = getCellAsString(headerRow.getCell(colIndex));
+    if (!actual.equalsIgnoreCase(expected)) {
+      throw new IllegalArgumentException(
+          "Expected header '" + expected + "' at column " + (colIndex + 1) +
+              " in " + fileName + ", but found '" + actual + "'"
+      );
     }
+  }
+
+  private boolean isRelevantDataRowEmpty(Row row) {
+    return getCellAsString(row.getCell(BRANCH_COL)).isEmpty()
+        && getCellAsString(row.getCell(PRODUCT_COL)).isEmpty()
+        && getCellAsString(row.getCell(MANUFACTURER_COL)).isEmpty()
+        && getCellAsString(row.getCell(SALES_COL)).isEmpty()
+        && getCellAsString(row.getCell(SUM_COL)).isEmpty()
+        && getCellAsString(row.getCell(INCOME_SUM_COL)).isEmpty()
+        && getCellAsString(row.getCell(DISCOUNT_SUM_COL)).isEmpty()
+        && getCellAsString(row.getCell(PROFIT_COL)).isEmpty();
+  }
+
+
+  private String getCellAsString(Cell cell) {
+    if (cell == null) {
+      return "";
+    }
+    return dataFormatter.formatCellValue(cell)
+        .trim();
+  }
+  private String getCellAsString(Cell cell, FormulaEvaluator evaluator) {
+    if (cell == null) return "";
+    return dataFormatter.formatCellValue(cell, evaluator).trim();
+  }
+
+  private double parseRuNumber(String s) {
+    if (s == null) {
+      return Double.NaN;
+    }
+    String t = s.trim()
+        .replace("\u00A0", "") // NBSP
+        .replace(" ", "")
+        .replace(".", "")
+        .replace(",", ".");
+    if (t.isEmpty()) {
+      return Double.NaN;
+    }
+    try {
+      return Double.parseDouble(t);
+    } catch (NumberFormatException e) {
+      return Double.NaN;
+    }
+  }
 }
